# ArchBar

./: .gitignore  ArchBarContainment.h  CMakeLists.txt  LICENSE  PKGBUILD  README.md  main.cpp  metadata.json
qml/: ArchBarContainment.cpp  main.qml
